# BitmapTool

./: CMakeLists.txt  main.cpp  readme.md
include/: Color.h  Image.h  Prerequisites.h  Rect.h
src/: Color.cpp  Image.cpp
